# perturb

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  annotated.html  annotated_dup.js  classes.html  classperturb_1_1Satellite-members.html  classperturb_1_1Satellite.html  classperturb_1_1Satellite.js  dir_5d5a5ec05ea476b57149ae374f60170a.html  dir_5d5a5ec05ea476b57149ae374f60170a.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaceperturb.html  namespaceperturb.js  namespaceperturb_1_1sgp4.html  namespaceperturb_1_1sgp4.js  namespaceperturb_1_1vallado__sgp4.html  namespaceperturb_1_1vallado__sgp4.js  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  (+35 more)
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake
docs/: Doxyfile  README.md  index.md
examples/: README.md
examples/cmake-c-wrapper/: CMakeLists.txt  main.c
examples/cmake-fetch-content/: CMakeLists.txt  main.cpp
examples/cmake-local/: CMakeLists.txt  main.cpp
include/perturb/: perturb.h  perturb.hpp  sgp4.h  sgp4.hpp  tle.h  tle.hpp  vallado_sgp4.hpp
original/: README.md  SGP4.cpp  SGP4.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+27 more)
src/: common_private.h  perturb.c  perturb.cpp  perturb_c.cpp  sgp4.cpp  tle.cpp  vallado_sgp4.cpp
tests/: CMakeLists.txt  test_perturb.cpp
